Fix <a> color in dark mode in projects

--- a/src/Components/Content/ProfilePage/ProfilePage.module.css
+++ b/src/Components/Content/ProfilePage/ProfilePage.module.css
@@ -20,7 +20,7 @@
 .infoProjects li{
     margin-top: 20px;
 }
-.infoProjects a{
+.mainDark .infoProjects a{
     color: #DCDCDC;
 }
 
